<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.businesscardapp.MainActivity"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                style="@style/BackgroundImage"
                android:contentDescription="@string/background_photo"
                android:src="@drawable/lovingvincentsmall" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_40"
                android:gravity="center"
                android:src="@drawable/lvtext" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="bottom|center_horizontal"
                android:paddingBottom="@dimen/margin_20"
                android:text="@string/business_name"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/roboto_thin"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#232F69"
            android:orientation="horizontal"
            android:padding="@dimen/margin_12">

            <TextView
                style="@style/Menu"
                android:text="@string/the_paintings"
                android:onClick="openPageThePaintings"/>

            <TextView
                style="@style/Menu"
                android:text="@string/the_movie"
                android:onClick="openPageTheMovie"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/ImageMenu"
                android:src="@drawable/paintings"
                android:onClick="openPageThePaintings"/>

            <ImageView
                style="@style/ImageMenu"
                android:src="@drawable/movie"
                android:onClick="openPageTheMovie"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_12"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_20">

            <TextView
                style="@style/BusinessDetails"
                android:drawableLeft="@drawable/address"
                android:drawableStart="@drawable/address"
                android:text="@string/address"
                android:onClick="openMapAddress"/>

            <TextView
                style="@style/BusinessDetails"
                android:drawableLeft="@drawable/website"
                android:drawableStart="@drawable/website"
                android:text="@string/website"
                android:onClick="openPageLovingVincent"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>